--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "commit": "git-cz"
   },
   "dependencies": {
+    "@svgr/webpack": "^8.1.0",
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0"
