--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
   },
   "dependencies": {
     "@svgr/webpack": "^8.1.0",
+    "clsx": "^2.1.1",
     "next": "16.0.3",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "tailwind-merge": "^3.4.0",
+    "tailwind-variants": "^3.1.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^20.1.0",
