--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "@tiptap/pm": "^3.11.0",
     "@tiptap/react": "^3.11.0",
     "@tiptap/starter-kit": "^3.11.0",
+    "axios": "^1.13.2",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.24",
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
