--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@svgr/webpack": "^8.1.0",
+    "axios": "^1.13.2",
     "clsx": "^2.1.1",
     "next": "16.0.3",
     "react": "19.2.0",
