--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@tiptap/react": "^3.11.1",
     "@tiptap/starter-kit": "^3.11.1",
     "@vercel/analytics": "^1.6.1",
+    "@vercel/speed-insights": "^1.3.1",
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
     "dompurify": "^3.3.0",
