--- a/package.json
+++ b/package.json
@@ -38,9 +38,9 @@
     "clsx": "^2.1.1",
     "dompurify": "^3.3.0",
     "framer-motion": "^12.23.24",
-    "next": "16.0.3",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "next": "^16.0.10",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "tailwind-merge": "^3.4.0",
     "tailwind-variants": "^3.1.1"
   },
